# eduLearn

./: .gitignore  .graphifyignore  AGENTS.md  README.md  readme.md
.github/: copilot-instructions.md
app/: pubspec.yaml
client/: README.md  pubspec.yaml
client/lib/: main.dart
client/test/: widget_test.dart
docs/: 00-design-system.md  01-overview.md  02-architecture.md  03-agent-orchestration.md  04-websocket-events.md  1_setup_requirement.md  2_flutter_bootstrap.md  3_server_backend_setup.md  README.md
docs/contract/: 00-index.md  01-health.md  02-auth.md  03-users.md  04-predictions.md  05-knowledge.md  06-chat-ws.md  06-chat.md  07-events.md  README.md
docs/planning/: 00-index.md  01-db-models.md  02-service-plan.md
docs/progress/: 00-index.md  01-specification.md  02-contract.md  03-backend.md  04-flutter.md  05-milestone.md  README.md
docs/reports/: index.md  ws-chat-fixes-tracking.md
docs/specification/: 00-index.md  01-overview.md  02-design-system.md  03-architecture.md  04-agent-orchestration.md  (+14 more)
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_labels.json.sig  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
infra/: .env.example  README.md  docker-compose.override.yml  docker-compose.yml
riset/: PLAN_RISET.md  ml-prak-uas.ipynb
server/: .dockerignore  Dockerfile  README.md  pyproject.toml
server/app/: llm.py  main.py
server/app/agent/: graph.py  planner.py  predictive_node.py  prompt.py  prompts.py  rag_node.py  reflector.py  response_node.py  state.py  supervisor.py
server/app/agent/tools/: __init__.py  _validation.py  firecrawl_tool.py  predictive_tool.py  profile_synthesizer.py  rag_tool.py  rule_engine.py  tools_node.py  validation_layer.py
server/app/api/: auth.py  chat.py  chat_ws.py  deps.py  health.py  knowledge.py  predictions.py  users.py
server/app/core/: config.py  logging.py
server/app/db/: __init__.py
server/app/db/migrations/: run.py
server/app/db/models/: __init__.py  audit.py  conversation.py  knowledge.py  prediction.py  user.py
server/app/machine_learning/: predictor.py  singleton.py
server/app/rag/: ingestion.py  retriever.py  vectorstore.py
server/app/schemas/: agent.py  auth.py  chat.py  event_sanitizer.py  events.py  health.py  knowledge.py  prediction.py
server/app/services/: auth_service.py
server/models/: config.json  metadata.json  model.weights.h5
(+105 files in other folders)
