[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
]
