[project]
name = "server"
version = "0.1.0"
description = "EduLearn AI Backend - FastAPI + LangGraph + RAG + ML Inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",

    "langgraph",
    "langchain",
    "langchain-openai",

    "sqlalchemy",
    "sqlmodel",
    "asyncpg",
    "psycopg[binary]",

    "python-dotenv",
    "python-jose[cryptography]",
    "argon2-cffi",
    "passlib[bcrypt]",

    "pydantic[email]",
    "pydantic-settings",

    # HTTP
    "httpx",

    # ML
    "tensorflow",
    "numpy",
    "pandas",
    "joblib",
    "scikit-learn",

    # File upload & parsing
    "pymupdf",
    "python-docx",
    "tiktoken",
    "python-multipart",
    "aiofiles",
]
